--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
   },
   "devDependencies": {
     "apidoc": "^0.16.1",
+    "assert": "^1.4.1",
     "grunt": "^1.0.1",
     "grunt-apidoc": "^0.11.0",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-mocha-istanbul": "^5.0.1",
     "grunt-nodemon": "^0.4.2",
-    "istanbul": "^0.4.4",
     "jshint": "^2.9.2",
-    "mocha": "^2.5.3"
+    "mocha": "^2.5.3",
+    "sinon": "^1.17.5"
   }
 }
