--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "bookshelf": "^0.10.0",
+    "compression": "^1.6.2",
     "express": "^4.14.0",
     "express-validator": "^2.20.8",
     "helmet": "^2.1.2",
     "jwt-simple": "^0.5.0",
     "knex": "^0.11.9",
+    "morgan": "^1.7.0",
     "multer": "1.0.0",
     "mysql": "^2.11.1",
     "passport": "^0.3.2",
@@ -24,6 +26,7 @@
   "devDependencies": {
     "apidoc": "^0.16.1",
     "assert": "^1.4.1",
+    "faker": "^3.1.0",
     "grunt": "^1.0.1",
     "grunt-apidoc": "^0.11.0",
     "grunt-contrib-jshint": "^1.0.0",
