--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "faker": "^3.1.0",
     "grunt": "^1.0.1",
     "grunt-apidoc": "^0.11.0",
+    "grunt-concurrent": "^2.3.0",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-mocha-istanbul": "^5.0.1",
