Add NodeMail and model registration

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "morgan": "^1.7.0",
     "multer": "1.0.0",
     "mysql": "^2.11.1",
+    "nodemailer": "^2.5.0",
+    "nodemailer-dkim": "^1.0.4",
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0"
   },
