--- a/package.json
+++ b/package.json
@@ -4,40 +4,41 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-	"test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "maldicion069 <ccrisrober@gmail.com>",
   "license": "ISC",
   "dependencies": {
-	"body-parser": "^1.15.2",
-	"bookshelf": "^0.10.0",
-	"compression": "^1.6.2",
-	"express": "^4.14.0",
-	"express-validator": "^2.20.8",
-	"helmet": "^2.1.2",
-	"jwt-simple": "^0.5.0",
-	"knex": "^0.11.9",
-	"morgan": "^1.7.0",
-	"multer": "1.0.0",
-	"mysql": "^2.11.1",
-	"nodemailer": "^2.5.0",
-	"nodemailer-dkim": "^1.0.4",
-	"passport": "^0.3.2",
-	"passport-jwt": "^2.1.0"
+    "body-parser": "^1.15.2",
+    "bookshelf": "^0.10.0",
+    "compression": "^1.6.2",
+    "express": "^4.14.0",
+    "express-validator": "^2.20.8",
+    "helmet": "^2.1.2",
+    "jwt-simple": "^0.5.0",
+    "knex": "^0.11.9",
+    "morgan": "^1.7.0",
+    "multer": "1.0.0",
+    "mysql": "^2.11.1",
+    "nodemailer": "^2.5.0",
+    "nodemailer-dkim": "^1.0.4",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.1.0",
+    "pug": "^2.0.0-beta4"
   },
   "devDependencies": {
-	"apidoc": "^0.16.1",
-	"assert": "^1.4.1",
-	"faker": "^3.1.0",
-	"grunt": "^1.0.1",
-	"grunt-apidoc": "^0.11.0",
-	"grunt-concurrent": "^2.3.0",
-	"grunt-contrib-jshint": "^1.0.0",
-	"grunt-contrib-watch": "^1.0.0",
-	"grunt-mocha-istanbul": "^5.0.1",
-	"grunt-nodemon": "^0.4.2",
-	"jshint": "^2.9.2",
-	"mocha": "^2.5.3",
-	"sinon": "^1.17.5"
+    "apidoc": "^0.16.1",
+    "assert": "^1.4.1",
+    "faker": "^3.1.0",
+    "grunt": "^1.0.1",
+    "grunt-apidoc": "^0.11.0",
+    "grunt-concurrent": "^2.3.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-mocha-istanbul": "^5.0.1",
+    "grunt-nodemon": "^0.4.2",
+    "jshint": "^2.9.2",
+    "mocha": "^2.5.3",
+    "sinon": "^1.17.5"
   }
 }
