--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-mocha-istanbul": "^5.0.1",
     "grunt-nodemon": "^0.4.2",
+    "grunt-notify": "^0.4.5",
     "jshint": "^2.9.2",
     "mocha": "^2.5.3",
     "sinon": "^1.17.5"
