--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "maldicion069 <ccrisrober@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "anf-ioc": "^1.0.2",
     "body-parser": "^1.15.2",
