--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "grunt-apidoc": "^0.11.0",
     "grunt-concurrent": "^2.3.0",
     "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-stylus": "^1.2.0",
+    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-mocha-istanbul": "^5.0.1",
     "grunt-nodemon": "^0.4.2",
