--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "maldicion069 <ccrisrober@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "anf-ioc": "^1.0.2",
     "body-parser": "^1.15.2",
     "bookshelf": "^0.10.0",
     "bookshelf-crud": "^1.2.1",
@@ -20,8 +19,9 @@
     "helmet": "^2.1.2",
     "jwt-simple": "^0.5.0",
     "knex": "^0.11.9",
+    "light-ioc": "^1.5.0",
     "morgan": "^1.7.0",
-    "multer": "1.0.0",
+    "multer": "1.2.0",
     "mysql": "^2.11.1",
     "nodemailer": "^2.5.0",
     "nodemailer-dkim": "^1.0.4",
@@ -43,7 +43,7 @@
     "grunt-nodemon": "^0.4.2",
     "grunt-notify": "^0.4.5",
     "jshint": "^2.9.2",
-    "mocha": "^2.5.3",
+    "mocha": "^3.0.1",
     "sinon": "^1.17.5"
   },
   "engine": "node >= 0.10"
