--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "maldicion069 <ccrisrober@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "async": "^2.0.1",
     "body-parser": "^1.15.2",
     "bookshelf": "^0.10.0",
     "bookshelf-crud": "^1.2.1",
