--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anf",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "app.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "express": "^4.14.0",
     "express-validator": "^2.20.8",
     "extend": "^3.0.0",
+    "figlet": "^1.1.2",
     "helmet": "^2.1.2",
     "i18n": "^0.8.3",
     "jwt-simple": "^0.5.0",
