--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "helmet": "^2.1.2",
     "i": "^0.3.5",
     "i18n": "^0.8.3",
+    "jsonwebtoken": "^7.1.7",
     "jwt-simple": "^0.5.0",
     "knex": "^0.11.9",
     "light-ioc": "^1.5.0",
