--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.15.2",
     "bookshelf": "^0.10.0",
     "bookshelf-crud": "^1.2.1",
+    "captains-log": "^1.0.0",
     "chai": "^3.5.0",
     "compression": "^1.6.2",
     "express": "^4.14.0",
@@ -28,6 +29,7 @@
     "jwt-simple": "^0.5.0",
     "knex": "^0.11.9",
     "light-ioc": "^1.5.0",
+    "lodash": "^4.14.1",
     "morgan": "https://registry.npmjs.org/morgan/-/morgan-1.7.0.tgz",
     "multer": "^1.2.0",
     "mysql": "^2.11.1",
