--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,9 @@
   ],
   "dependencies": {
     "jquery": "^3.1.0",
-    "react": "^15.3.0"
+    "react": "^15.3.0",
+    "react-router": "^2.6.1",
+    "bootstrap": "^3.3.7",
+    "react-bootstrap": "^0.30.2"
   }
 }
