--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anf",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "",
   "main": "app.js",
   "scripts": {
@@ -37,7 +37,8 @@
     "nodemailer": "^2.5.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0",
-    "pug": "https://registry.npmjs.org/pug/-/pug-2.0.0-beta4.tgz"
+    "pug": "https://registry.npmjs.org/pug/-/pug-2.0.0-beta4.tgz",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
     "apidoc": "^0.16.1",
