--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anf",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "",
   "main": "app.js",
   "scripts": {
@@ -33,7 +33,7 @@
     "multer": "^1.2.0",
     "mysql": "^2.11.1",
     "node-sender": "^2.0.4",
-    "node-upload": "^2.0.0",
+    "node-upload": "^2.1.1",
     "nodemailer": "^2.5.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0",
@@ -52,6 +52,7 @@
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-env": "^0.4.4",
+    "grunt-knex": "^1.1.0",
     "grunt-mocha-istanbul": "^5.0.1",
     "grunt-nodemon": "^0.4.2",
     "grunt-notify": "^0.4.5",
