--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "apidoc": "^0.16.1",
     "assert": "^1.4.1",
     "chai": "^3.5.0",
+    "cli-table": "^0.3.1",
     "faker": "^3.1.0",
     "grunt": "^1.0.1",
     "grunt-apidoc": "^0.11.0",
