--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "react": "^15.3.0",
     "react-router": "^2.6.1",
     "bootstrap": "^3.3.7",
-    "react-bootstrap": "^0.30.2"
+    "react-bootstrap": "^0.30.2",
+    "angular": "^1.5.8"
   }
 }
